DemoMetadata/unpackaged/objects/FSL__User_Territory__c.object
<CustomObject>
    <description>Which Territories are visible to this user (Default = All)</description>
    <fields>
        <fullName>FSL__ServiceTerritory__c</fullName>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipName>User_Territories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FSL__Territory_Name__c</fullName>
        <formula>FSL__ServiceTerritory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Territory</label>
    <listViews>
        <fullName>FSL__All_User_Territories</fullName>
        <columns>NAME</columns>
        <columns>FSL__User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All User Territories</label>
    </listViews>
    <nameField>
        <displayFormat>ULID-{000000}</displayFormat>
        <label>User Territory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Territories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>